Правки Главной страницы по разметке

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 <body>
   <header class="main-header">
     <nav class="main-navigation">
+      <a class="main-header-logo">
+        <img src="img/logo-sedona.svg" width="138" height="70" alt="Логотип Седоны">
+      </a>
       <ul class="site-navigation">
         <li><a href="info.html">Информация</a></li>
         <li><a href="photo.html">Фото и видео</a></li>
@@ -14,112 +17,102 @@
         <li><a href="catalog.html">Гостиницы</a></li>
       </ul>
     </nav>
-    <section class="main-header-logo">
-      <h2 class="visually-hidden">Логотип</h2>
-      <img class="header-logo__img" src="img/logo-sedona.svg" width="138" height="70" alt="Логотип Седоны">
-    </section>
   </header>
   <main>
-    <section class="logo-sedona">
+    <section>
       <!-- Пропущен большой блок-->
     </section>
-    <article сlass="blog-entry">
-      <h2 class="article__title-entry">Седона - небольшой городок в Аризоне, <br>заслуживающий большего!</h2>
-      <p class="text">Рассмотрим пять причин, по которым седона круче, чем Гранд Каньен!</p>
-      <section class="reasons">
-        <h2 class="visually-hidden">Причины</h2>
-          <ol>
-            <li class="reasons1">
-              <h3 class="reasons1-entry__title">
-                <a href="">Настоящий городок</a>
-              </h3>
-              <p class="text">№1</p>
-              <p class="text">Седона не аттракцион для туристов, <br>там течет настоящая жизнь</p>
-              <img class="reasons1-entry__img" src="#.jpg" width="800" height="258" alt="Фото Седоны">
-            </li>
-            <div class="container">
-              <ul class="service">
-                <li class="housing">
-                  <img class="housing-entry__img" src="img/icon-1.svg" width="" height="" alt="Жилье">
-                  <h3 class="housing__title">
-                    <a href="">Жилье</a>
-                  </h3>
-                </li>
-                <li class="food">
-                  <img class="food-entry__img" src="img/icon-2.svg " width="" height="" alt="Еда">
-                  <h3 class="food__title">
-                    <a href="">Еда</a>
-                  </h3>
-                  <p class="text">Всегда заказывайте фирменный бургер,<br>вы не разочаруетесь!</p>
-                </li>
-                <li class="souvenirs">
-                  <img class="souvenirs-entry__img" src="img/icon-3.svg " width="" height="" alt="Сувениры">
-                  <h3 class="souvenirs__title">
-                    <a href="">Сувениры</a>
-                  </h3>
-                  <p class="text">Не только китайского, но и местного<br>производства</p>
-                </li>
-              </ul>
-            </div>
-            <li class="reasons2">
-              <h3 class="reasons2-entry__title">
-                <a href="">Там есть мост дьявола</a>
-              </h3>
-              <p class="text">№2</p>
-              <p class="text">Да, по нему можно пройти! Если конечно<br>вы осмелитесь</p>
-              <img class="reasons2-entry__img" src="#.jpg" width="800" height="258" alt="Фото Моста Дьявола">
-            </li>
-            <li class="reasons3">
-              <h3 class="reasons3-entry__title">
-                <a href="">Небольшая площадь</a>
-              </h3>
-              <p class="text">№3</p>
-              <p class="text">Все достопримечательности<br>находятся очень близко</p>
-            </li>
-            <li class="reasons4">
-              <h3 class="reasons4-entry__title">
-                <a href=""> Красивая дорога</a>
-              </h3>
-              <p class="text">№4<p>
-              <p class="text">Ехать в Седону ихз Лас-Вегаса совсем<br>не скучно!</p>
-            </li>
-            <li class="reasons5">
-              <h3 class="reasons5-entry__title">
-                <a href="">Мало туристов</a>
-              </h3>
-              <p class="text">№5</p>
-              <p class="text">Большинство едет в Гранд Коньон<br>и толпится там</p>
-            </li>
-          </ol>
-        </section>
-      </article>
-      <section class="interest">
-        <h2 class="interest-title">Заинтересовались?</h2>
-        <p class="text">Укажите предполагаемые даты поездки,<br>и мы покажем лучшие предложения гостиниц в Седоне</p>
+    <article>
+      <h2>Седона - небольшой городок в Аризоне, заслуживающий большего!</h2>
+      <p>Рассмотрим пять причин, по которым седона круче, чем Гранд Каньен!</p>
+      <section>
+        <h2>Причины</h2>
+        <ol>
+          <li>
+            <h3>
+              <span>Настоящий городок</span>
+            </h3>
+            <span>№1</span>
+            <p>Седона не аттракцион для туристов, там течет настоящая жизнь</p>
+            <img src="#.jpg" width="800" height="258" alt="Фото Седоны">
+          </li>
+          <div>
+            <ul>
+              <li>
+                <img src="img/icon-1.svg" width="" height="" alt="Жилье">
+                <span>Жилье</span>
+              </li>
+              <li>
+                <img src="img/icon-2.svg" width="" height="" alt="Еда">
+                <span>Еда</span>
+                <p>Всегда заказывайте фирменный бургер,вы не разочаруетесь!</p>
+              </li>
+              <li>
+                <img src="img/icon-3.svg" width="" height="" alt="Сувениры">
+                <span>Сувениры</span>
+                <p>Не только китайского, но и местного производства</p>
+              </li>
+            </ul>
+          </div>
+          <li>
+            <h3>
+              <a href="">Там есть<br>мост дьявола</a>
+            </h3>
+            <span>№2</span>
+            <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+            <img src="#.jpg" width="800" height="258" alt="Фото Моста Дьявола">
+          </li>
+          <li>
+            <h3>
+              <a href="">Небольшая площадь</a>
+            </h3>
+            <span>№3</span>
+            <p>Все достопримечательности находятся очень близко</p>
+          </li>
+          <li>
+            <h3>
+              <a href=""> Красивая дорога</a>
+            </h3>
+            <span>№4</span>
+            <p>Ехать в Седону ихз Лас-Вегаса совсем не скучно!</p>
+          </li>
+          <li>
+            <h3>
+              <a href="">Мало туристов</a>
+            </h3>
+            <span>№5</span>
+            <p>Большинство едет в Гранд Коньон и толпится там</p>
+          </li>
+        </ol>
       </section>
-      <section class="travel-date">
-        <img class="map__img" src="img/map.png" width="1200" height="593" alt="Карта">
-          <!-- Здесь будет форма -->
-      </section>
-    </main>
-    <footer class="main-footer">
-      <p class="visit">#Visitsedona</p>
-      <p class="tel">Тел:
-        <a href="tel:+7(495)666-02-66">
-      </p>
-      <div class="footer-social">
-        <ul>
-          <li><a class="social-button" href="#">img/twitter</a></li>
-          <li><a class="social-button" href="#">img/fb-icon</a></li>
-          <li><a class="social-button" href="#">img/youtube</a></li>
-        </ul>
-      </div>
-      <p class="footer-copyrigh">
-      <span>Websait by</span>
-        <a href="https://htmlacademy.ru/intensive/htmlcss">
-          <img class="logo-html__img" src="img/logo-htmlacademy.svg" width="" height="" alt="Логотип HTML Academy">
-        </a>
-      </p>
-    </footer>
-  </body>
+    </article>
+    <section>
+      <h2>Заинтересовались?</h2>
+      <p>Укажите предполагаемые даты поездки, и мы покажем лучшие предложения гостиниц в Седоне</p>
+    </section>
+    <section>
+      <img src="img/map.png" width="1200" height="593" alt="Карта">
+        <!-- Здесь будет форма -->
+    </section>
+  </main>
+  <footer>
+    <p>#Visitsedona</p>
+    <p>Тел:</p>
+      <a href="tel:+74956660266">+7(495)666-02-66</a>
+    </p>
+    <div>
+      <ul>
+        <li><a href=""><img src="img/twitter.svg" alt="Твиттер"></a></li>
+        <li><a href=""><img src="img/fb-icon.svg" alt="Фейсбук"></a></li>
+        <li><a href=""><img src="img/youtube.svg" alt="Ютуб"></a></li>
+      </ul>
+    </div>
+    <p>
+    <span>Website by</span>
+      <a href="https://htmlacademy.ru/intensive/htmlcss">
+        <img src="img/logo-htmlacademy.svg" width="" height="" alt="Логотип HTML Academy">
+      </a>
+    </p>
+  </footer>
+</body>
 </html>
