--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
 <body>
   <header>
     <nav>
-      <a clmain-header-logo" href="index.html">
+      <a href="index.html">
         <img src="img/logo-sedona.svg" width="138" height="70" alt="Логотип Седоны">
       </a>
       <ul>
@@ -95,9 +95,9 @@
     </p>
     <div>
       <ul>
-        <li><a href=""><img src="img/twitter.svg" alt="Твиттер"></a></li>
-        <li><a href=""><img src="img src="img/fb-icon.svg" alt="Фейсбук"></a></li>
-        <li><a href=""><img src="img src="img/youtube.svg" alt="Ютуб"></a></li>
+        <li><a href=""><img/twitter.svg" alt="Твиттер"></a></li>
+        <li><a href=""><img/fb-icon.svg" alt="Фейсбук"></a></li>
+        <li><a href=""><img/youtube.svg" alt="Ютуб"></a></li>
       </ul>
     </div>
     <p>
