--- a/catalog.html
+++ b/catalog.html
@@ -43,7 +43,7 @@
       <ul>
       <li>
         <a href="">
-          <img src="img/аmara.jpg" width="135" height="90" alt="Вид на гостиницу Amara Resort & spa">
+          <img src="img/amara.jpg" width="135" height="90" alt="Вид на гостиницу Amara Resort & spa">
         </a>
         <h3>
           <a href="">Amara Resort & spa</a>
