--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <title>HTML Academy:Седона</title>
 </head>
 <body>
-  <header class="main-header">
-    <nav class="main-navigation">
-      <a class="main-header-logo">
+  <header>
+    <nav>
+      <a>
         <img src="img/logo-sedona.svg" width="138" height="70" alt="Логотип Седоны">
       </a>
-      <ul class="site-navigation">
+      <ul>
         <li><a href="info.html">Информация</a></li>
         <li><a href="photo.html">Фото и видео</a></li>
         <li><a href="map.html">Карта штата</a></li>
