Задание по графике

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </h3>
             <span>№1</span>
             <p>Седона не аттракцион для туристов, там течет настоящая жизнь</p>
-            <img src="#.jpg" width="800" height="258" alt="Фото Седоны">
+            <img src="#.jpg" width="800" height="256" alt="Фото Седоны">
           </li>
           <div>
             <ul>
@@ -54,7 +54,7 @@
             </ul>
           </div>
           <li>
-            <img src="#.jpg" width="800" height="258" alt="Фото Моста Дьявола">
+            <img src="flag.jpg" width="800" height="256" alt="Фото Моста Дьявола">
             <h3>
               <a href="">Там есть<br>мост дьявола</a>
             </h3>
@@ -101,15 +101,15 @@
     </p>
     <div>
       <ul>
-        <li><a href=""><img src="img/twitter.svg" alt="Твиттер"></a></li>
-        <li><a href=""><img src="img/fb-icon.svg" alt="Фейсбук"></a></li>
-        <li><a href=""><img src="img/youtube.svg" alt="Ютуб"></a></li>
+        <li><a href=""><img/twitter.svg" width="17" height="15" alt="Твиттер"></a></li>
+        <li><a href=""><img/fb-icon.svg" width="12" height="22" alt="Фейсбук"></a></li>
+        <li><a href=""><img/youtube.svg" width="20" height="16" alt="Ютуб"></a></li>
       </ul>
     </div>
     <p>
     <span>Website by</span>
       <a href="https://htmlacademy.ru/intensive/htmlcss">
-        <img src="img/logo-htmlacademy.svg" width="" height="" alt="Логотип HTML Academy">
+        <img src="img/logo-htmlacademy.svg" width="115" height="41" alt="Логотип HTML Academy">
       </a>
     </p>
   </footer>
