--- a/catalog.html
+++ b/catalog.html
@@ -34,8 +34,8 @@
           <span>По рейтингу</span>
         </li>
         <li>
-          <img src="img/icon-down-dir.svg">
-          <img src="img/icon-up-dir.svg">
+          <img src="img/icon-down-dir.svg" src="img/star.svg" width="11" height="10">
+          <img src="img/icon-up-dir.svg" src="img/star.svg" width="11" height="10">
         </li>
       </ul>
     </section>
@@ -52,7 +52,7 @@
         <span>От 4000 р.</span>
         <a href="">Подробнее</a>
         <a href="">Забронировать</a>
-        <img src="img/star.svg">
+        <img src="img/star.svg" width="18" height="17">
         <span>Рейтинг: 8,5<span>
       </li>
       <li>
@@ -66,7 +66,7 @@
         <span>От 3000 р.</span>
         <a href="">Подробнее</a>
         <a href="">Забронировать</a>
-        <img src="img/star.svg">
+        <img src="img/star.svg" width="18" height="17">
         <span>Рейтинг: 8,9</span>
       </li>
       <li>
@@ -80,7 +80,7 @@
         <span>От 2000 р.</span>
         <a href="">Подробнее</a>
         <a href="">Забронировать</a>
-        <img src="img/star.svg">
+        <img src="img/star.svg" width="18" height="17">
         <span>Рейтинг: 9,2</span>
       </li>
       </ul>
@@ -93,15 +93,15 @@
     </p>
     <div>
       <ul>
-        <li><a href=""><img/twitter.svg" alt="Твиттер"></a></li>
-        <li><a href=""><img/fb-icon.svg" alt="Фейсбук"></a></li>
-        <li><a href=""><img/youtube.svg" alt="Ютуб"></a></li>
+        <li><a href=""><img/twitter.svg" width="17" height="15" alt="Твиттер"></a></li>
+        <li><a href=""><img/fb-icon.svg" width="12" height="22" alt="Фейсбук"></a></li>
+        <li><a href=""><img/youtube.svg" width="20" height="16" alt="Ютуб"></a></li>
       </ul>
     </div>
     <p>
     <span>Website by</span>
       <a href="https://htmlacademy.ru/intensive/htmlcss">
-        <img src="img/logo-htmlacademy.svg" width="" height="" alt="Логотип HTML Academy">
+        <img src="img/logo-htmlacademy.svg" width="115" height="41" alt="Логотип HTML Academy">
       </a>
     </p>
   </footer>
