--- a/catalog.html
+++ b/catalog.html
@@ -34,8 +34,8 @@
           <span>По рейтингу</span>
         </li>
         <li>
-          <img src="img/icon-down-dir.svg" src="img/star.svg" width="11" height="10">
-          <img src="img/icon-up-dir.svg" src="img/star.svg" width="11" height="10">
+          <img src="img/icon-down-dir.svg" width="11" height="10">
+          <img src="img/icon-up-dir.svg" width="11" height="10">
         </li>
       </ul>
     </section>
@@ -93,9 +93,9 @@
     </p>
     <div>
       <ul>
-        <li><a href=""><img/twitter.svg" width="17" height="15" alt="Твиттер"></a></li>
-        <li><a href=""><img/fb-icon.svg" width="12" height="22" alt="Фейсбук"></a></li>
-        <li><a href=""><img/youtube.svg" width="20" height="16" alt="Ютуб"></a></li>
+        <li><a href=""><img src="img/twitter.svg" width="17" height="15" alt="Твиттер"></a></li>
+        <li><a href=""><img src="img/fb-icon.svg" width="12" height="22" alt="Фейсбук"></a></li>
+        <li><a href=""><img src="img/youtube.svg" width="20" height="16" alt="Ютуб"></a></li>
       </ul>
     </div>
     <p>
