--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
     </p>
     <div>
       <ul>
-        <li><a href=""><img/twitter.svg" width="17" height="15" alt="Твиттер"></a></li>
-        <li><a href=""><img/fb-icon.svg" width="12" height="22" alt="Фейсбук"></a></li>
-        <li><a href=""><img/youtube.svg" width="20" height="16" alt="Ютуб"></a></li>
+        <li><a href=""><img src="img/twitter.svg" width="17" height="15" alt="Твиттер"></a></li>
+        <li><a href=""><img src="img/fb-icon.svg" width="12" height="22" alt="Фейсбук"></a></li>
+        <li><a href=""><img src="img/youtube.svg" width="20" height="16" alt="Ютуб"></a></li>
       </ul>
     </div>
     <p>
