вторая часть задания по графике

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </h3>
             <span>№1</span>
             <p>Седона не аттракцион для туристов, там течет настоящая жизнь</p>
-            <img src="#.jpg" width="800" height="256" alt="Фото Седоны">
+            <img src="img/flag.jpg" width="800" height="256" alt="Фото Седоны">
           </li>
           <div>
             <ul>
@@ -54,7 +54,7 @@
             </ul>
           </div>
           <li>
-            <img src="flag.jpg" width="800" height="256" alt="Фото Моста Дьявола">
+            <img src="img/mount.jpg" width="800" height="256" alt="Фото Моста Дьявола">
             <h3>
               <a href="">Там есть<br>мост дьявола</a>
             </h3>
