--- a/catalog.html
+++ b/catalog.html
@@ -20,6 +20,7 @@
   </header>
   <main>
     <section>
+      <h2 class="visually-hidden">Фильтр отелей</h2>
       <!-- Здесь будет форма -->
       <h3>Найдено: 3</h2>
       <span>Сортировка:</span>
@@ -40,49 +41,46 @@
       </ul>
     </section>
     <section>
+      <h2 class="visually-hidden">Список отелей</h2>
       <ul>
-      <li>
-        <a href="">
-          <img src="img/amara.jpg" width="135" height="90" alt="Вид на гостиницу Amara Resort & spa">
-        </a>
-        <h3>
-          <a href="">Amara Resort & spa</a>
-        </h3>
-        <span>Гостиница</span>
-        <span>От 4000 р.</span>
-        <a href="">Подробнее</a>
-        <a href="">Забронировать</a>
-        <img src="img/star.svg" width="18" height="17">
-        <span>Рейтинг: 8,5<span>
-      </li>
-      <li>
-        <a href="">
-          <img src="img/desert.jpg" width="135" height="90" alt="Вид на мотель Desert Quail Inn">
-        </a>
-        <h3>
-          <a href="">Desert Quail Inn</a>
-        </h3>
-        <span>Мотель</span>
-        <span>От 3000 р.</span>
-        <a href="">Подробнее</a>
-        <a href="">Забронировать</a>
-        <img src="img/star.svg" width="18" height="17">
-        <span>Рейтинг: 8,9</span>
-      </li>
-      <li>
-        <a href="">
-          <img src="img/villas.jpg" width="135" height="90" alt="Вид на апартаменты Villas at Poco Diablo">
-        </a>
-        <h3>
-          <a href="">Villas at Poco Diablo</a>
-        </h3>
-        <span>Апартаменты</span>
-        <span>От 2000 р.</span>
-        <a href="">Подробнее</a>
-        <a href="">Забронировать</a>
-        <img src="img/star.svg" width="18" height="17">
-        <span>Рейтинг: 9,2</span>
-      </li>
+        <li>
+          <a href="">
+            <img src="img/amara.jpg" width="135" height="90" alt="Вид на гостиницу Amara Resort & spa">
+            <h3>
+             Amara Resort & spa</a>
+            </h3>
+          </a>
+          <span>Гостиница</span>
+          <span>От 4000 р.</span>
+          <a href="">Подробнее</a>
+          <a href="">Забронировать</a>
+          <img src="img/star.svg" width="18" height="17">
+          <span>Рейтинг: 8,5<span>
+        </li>
+        <li>
+          <a href="">
+            <img src="img/desert.jpg" width="135" height="90" alt="Вид на мотель Desert Quail Inn">
+            <h3>Desert Quail Inn</h3>
+          </a>
+          <span>Мотель</span>
+          <span>От 3000 р.</span>
+          <a href="">Подробнее</a>
+          <a href="">Забронировать</a>
+          <img src="img/star.svg" width="18" height="17">
+          <span>Рейтинг: 8,9</span>
+        </li>
+        <li>
+          <a href="">
+            <img src="img/villas.jpg" width="135" height="90" alt="Вид на апартаменты Villas at Poco Diablo">
+            <h3>Villas at Poco Diablo</h3>
+          </a>
+          <span>Апартаменты</span>
+          <span>От 2000 р.</span>
+          <a href="">Подробнее</a>
+          <a href="">Забронировать</a>
+          <img src="img/star.svg" width="18" height="17">
+          <span>Рейтинг: 9,2</span>
+        </li>
       </ul>
     </section>
   </main>
