--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
               <li>
                 <img src="img/icon-1.svg" width="" height="" alt="Жилье">
                 <span>Жилье</span>
+                <p>Всегда можно пожить в настоящем мотеле, все как в кино!</p>
               </li>
               <li>
                 <img src="img/icon-2.svg" width="" height="" alt="Еда">
@@ -98,18 +99,18 @@
       <fielded>
         <legend>Поиск гостиницы в Седоне</legend>
         <p>
-          <label for=”appointment-data”>Дата заезда</label>
-          <input type=”text”/><input id=”appointment-data” value="24 апреля 2017” type="image" src="img /calendar. png” alt=”Календарь”/>
+          <label for="appointment-data">Дата заезда</label>
+          <input type="text"/><input id="appointment-data" value="24 апреля 2017" type="image" src="img /calendar.png" alt="Календарь"/>
         </p>
         <p>
-          <label for=”departure-data”>Дата выезда</label>
-          <input type="text" name="date" id=”departure-data” value="4 июля 2017”/><input type="image" srs=”img /calendar. png” alt=”Календарь”/>
+          <label for="departure-data">Дата выезда</label>
+          <input type="text" name="date" id="departure-data" value="4 июля 2017"/><input type="image" srs="img /calendar.png" alt="Календарь"/>
         </p>
         <span>Взрослые:</span>
-        <button>-</button><input type=”number” value=”2”/><button>+</button>
+        <button>-</button><input type="number" value="2"/><button>+</button>
         <span>Дети:</span>
-        <button>-</button><input type=”number” value=”0”/><button>+</button
-        <button>-</button><input type=”number” value=”0”/><button>+</button
+        <button>-</button><input type="number" value="0"/><button>+</button
+        <button>-</button><input type="number" value="0"/><button>+</button
         <button type="submit">Найти</button>
       </fielded>
     </section>
