--- a/index.html
+++ b/index.html
@@ -108,11 +108,10 @@
         </p>
         <p>
           <label for="adults">Взрослые:</label>
-          <button>-</button><input type=”number” id="adults" value=”2”/><button>+</button>
+          <button>-</button><input type="number" id="adults" value="2"/><button>+</button>
         </p>
         <p>
           <label for="child">Дети:</label>
-          <span>Дети:</span>
           <button>-</button><input type="number" id="child" value="0"/><button>+</button>
         </p>
         <button type="submit">Найти</button>
