--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <legend>Поиск гостиницы в Седоне</legend>
         <p>
           <label for="appointment-data">Дата заезда</label>
-          <input type="text"/><input id="appointment-data" value="24 апреля 2017" type="image" src="img /calendar.png" alt="Календарь"/>
+          <input type="text" id="appointment-data" name="date" value="24 апреля 2017"/> <input type="image" src="img /calendar.png" alt="Календарь"/>
         </p>
         <p>
           <label for="departure-data">Дата выезда</label>
