--- a/index.html
+++ b/index.html
@@ -59,28 +59,28 @@
           <li>
             <img src="img/mount.jpg" width="800" height="256" alt="Фото Моста Дьявола">
             <h3>
-              <a href="">Там есть<br>мост дьявола</a>
+              <span>Там есть<br>мост дьявола</span>
             </h3>
             <span>№2</span>
             <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
           </li>
           <li>
             <h3>
-              <a href="">Небольшая площадь</a>
+              <span>Небольшая площадь</span>
             </h3>
             <span>№3</span>
             <p>Все достопримечательности находятся очень близко</p>
           </li>
           <li>
             <h3>
-              <a href=""> Красивая дорога</a>
+              <span> Красивая дорога</span>
             </h3>
             <span>№4</span>
             <p>Ехать в Седону ихз Лас-Вегаса совсем не скучно!</p>
           </li>
           <li>
             <h3>
-              <a href="">Мало туристов</a>
+              <span>Мало туристов</span>
             </h3>
             <span>№5</span>
             <p>Большинство едет в Гранд Коньон и толпится там</p>
@@ -94,7 +94,7 @@
     </section>
     <section>
       <h2 class="visually-hidden">Забронировать отель</h2>
-      <img src="img/map.png" width="1200" height="593" alt="Карта">
+      <img src="img/map.png" width="1200" height="593" alt="Седона на Карте   ">
       <form action="https://echo.htmlacademy.ru"; method="post" oninput="rateoutput.value=rating.value">
       <fielded>
         <legend>Поиск гостиницы в Седоне</legend>
