--- a/index.html
+++ b/index.html
@@ -106,14 +106,10 @@
           <label for="departure-data">Дата выезда</label>
           <input type="text" name="date" id="departure-data" value="4 июля 2017"/><input type="image" srs="img /calendar.png" alt="Календарь"/>
         </p>
-        <p>
-          <label for="adults">Взрослые:</label>
-          <button>-</button><input type="number" id="adults" value="2"/><button>+</button>
-        </p>
-        <p>
-          <label for="child">Дети:</label>
-          <button>-</button><input type="number" id="child" value="0"/><button>+</button>
-        </p>
+        <span>Взрослые:</span>
+        <button>-</button><input type="number" id="adults" value="2"/><button>+</button>
+        <span>Дети:</span>
+        <button>-</button><input type="number" id="child" value="0"/><button>+</button>
         <button type="submit">Найти</button>
       </fielded>
     </section>
