--- a/catalog.html
+++ b/catalog.html
@@ -22,7 +22,7 @@
     <section>
       <h2 class="visually-hidden">Фильтр отелей</h2>
       <!-- Здесь будет форма -->
-      <h3>Найдено: 3</h2>
+      <h3>Найдено: 3</h3>
       <span>Сортировка:</span>
       <ul>
         <li>
@@ -47,7 +47,7 @@
           <a href="">
             <img src="img/amara.jpg" width="135" height="90" alt="Вид на гостиницу Amara Resort & spa">
             <h3>
-             Amara Resort & spa</a>
+             Amara Resort & spa
             </h3>
           </a>
           <span>Гостиница</span>
