--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
   </main>
   <footer>
     <p>#Visitsedona</p>
-    <p>Тел:</p>
+    <p>Тел:
       <a href="tel:+74956660266">+7(495)666-02-66</a>
     </p>
     <div>
