--- a/catalog.html
+++ b/catalog.html
@@ -46,22 +46,20 @@
         <li>
           <a href="">
             <img src="img/amara.jpg" width="135" height="90" alt="Вид на гостиницу Amara Resort & spa">
-            <h3>
-             Amara Resort & spa
-            </h3>
           </a>
+          <h3>Amara Resort & spa</h3>
           <span>Гостиница</span>
           <span>От 4000 р.</span>
           <a href="">Подробнее</a>
           <a href="">Забронировать</a>
           <img src="img/star.svg" width="18" height="17">
-          <span>Рейтинг: 8,5<span>
+          <span>Рейтинг: 8,5</span>
         </li>
         <li>
           <a href="">
             <img src="img/desert.jpg" width="135" height="90" alt="Вид на мотель Desert Quail Inn">
-            <h3>Desert Quail Inn</h3>
           </a>
+          <h3>Desert Quail Inn</h3>
           <span>Мотель</span>
           <span>От 3000 р.</span>
           <a href="">Подробнее</a>
@@ -72,8 +70,8 @@
         <li>
           <a href="">
             <img src="img/villas.jpg" width="135" height="90" alt="Вид на апартаменты Villas at Poco Diablo">
-            <h3>Villas at Poco Diablo</h3>
           </a>
+          <h3>Villas at Poco Diablo</h3>
           <span>Апартаменты</span>
           <span>От 2000 р.</span>
           <a href="">Подробнее</a>
