--- a/index.html
+++ b/index.html
@@ -97,7 +97,6 @@
       <h2 class="visually-hidden">Забронировать отель</h2>
       <img src="img/map.png" width="1200" height="593" alt="Седона на Карте">
       <form action="https://echo.htmlacademy.ru" method="post">
-      <fielded>
         <p>
           <label for="appointment-data">Дата заезда</label>
           <input type="text" id="appointment-data" name="date" placeholder="24 апреля 2017">
@@ -105,23 +104,22 @@
         </p>
         <p>
           <label for="departure-data">Дата выезда</label>
-          <input type="text" id="departure-data" name="date" placeholder ="4 июля 2017">
+          <input type="text" id="departure-data" name="date" placeholder="4 июля 2017">
           <buttom type="button"><img src="img/calendar.svg" alt="Календарь"></button>
         </p>
         <div>
-          <label for="adults">Взрослые </label>
+          <label for="adults">Взрослые:</label>
           <button type="button">-</button>
-          <input type="number" id="adults" value="2"/>
+          <input type="number" id="adults" value="2">
           <button type="button">+</button>
           <label for="child">Дети:</span>
           <button type="button">-</button>
-          <input type="number" id="child" value="0"/>
+          <input type="number" id="child" value="0">
           <button type="button">+</button>
         </div>
         <button type="submit">Найти</button>
-      </fielded>
-    </form>
-  </section>
+      </form>
+    </section>
   </main>
   <footer>
     <p>#Visitsedona</p>
