Дабавила в размерку новую форму

--- a/catalog.html
+++ b/catalog.html
@@ -21,7 +21,47 @@
   <main>
     <section>
       <h2 class="visually-hidden">Фильтр отелей</h2>
-      <!-- Здесь будет форма -->
+      <form method="get" action="https://echo.htmlacademy.ru">
+        <fieldset>
+          <legend>Инфраструктура:</legend>
+          <ul>
+            <li>
+              <input type="checkbox" name="basin" checked>
+                Бассейн
+            </li>
+            <li>
+              <input type="checkbox" name="parking">
+                Парковка
+            </li>
+            <li>
+              <input type="checkbox" name="wi-fi">
+                WI-FI
+            </li>
+          </ul>
+        </fieldset>
+      </form>
+      <h2 class="visually-hidden">Фильтр отелей</h2>
+      <form method="get" action="https://echo.htmlacademy.ru">
+        <fieldset>
+          <legend>Тип жилья:</legend>
+          <ul>
+            <li>
+              <input type="checkbox" name="hotel" checked>
+                Гостиница
+            </li>
+            <li>
+              <input type="checkbox" name="motel" checked>
+                Мотель
+            </li>
+            <li>
+              <input type="checkbox" name="apartment" checked>
+                Аппартаменты
+            </li>
+          </ul>
+        </fieldset>
+      </form>
+    </section>
+    <section>
       <h3>Найдено: 3</h3>
       <span>Сортировка:</span>
       <ul>
