--- a/catalog.html
+++ b/catalog.html
@@ -26,38 +26,35 @@
           <legend>Инфраструктура:</legend>
           <ul>
             <li>
-              <input type="checkbox" name="basin" checked>
-                Бассейн
+              <label for="basin">Бассейн</label>
+              <input type="checkbox" id="basin" name="basin" checked>
             </li>
             <li>
-              <input type="checkbox" name="parking">
-                Парковка
+              <label for="parking">Парковка></label>
+              <input type="checkbox" id="parking" name="parking">
             </li>
             <li>
-              <input type="checkbox" name="wi-fi">
-                WI-FI
+              <label for="wi-fi">WI-FI</label>
+              <input type="checkbox" id="wi-fi" name="wi-fi">
             </li>
           </ul>
-        </fieldset>
-      </form>
-      <h2 class="visually-hidden">Фильтр отелей</h2>
-      <form method="get" action="https://echo.htmlacademy.ru">
-        <fieldset>
+          <h2 class="visually-hidden">Фильтр отелей</h2>
           <legend>Тип жилья:</legend>
           <ul>
             <li>
-              <input type="checkbox" name="hotel" checked>
-                Гостиница
+              <label for="hotel">Гостиница</label>
+              <input type="checkbox" id="hotel" name="hotel" checked>
             </li>
             <li>
-              <input type="checkbox" name="motel" checked>
-                Мотель
+              <label for="motel">Мотель</label>
+              <input type="checkbox" id="motel" name="motel" checked>
             </li>
             <li>
-              <input type="checkbox" name="apartment" checked>
-                Аппартаменты
+              <label for="apartment">Аппартаменты</label>
+              <input type="checkbox" id="apartment" name="apartment" checked>
             </li>
           </ul>
+          <button type="submit">Показать</button>
         </fieldset>
       </form>
     </section>
