--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <h3>
               <span>Настоящий городок</span>
             </h3>
-            <span>№1</span>
+            <span class="number-reasons">№1</span>
             <p>Седона не аттракцион для туристов, там течет настоящая жизнь</p>
             <img src="img/flag.jpg" width="800" height="256" alt="Фото Седоны">
           </li>
@@ -50,7 +50,7 @@
               <li class="reasons-item item-reasons">
                 <img src="img/icon-2.svg" width="" height="" alt="Еда">
                 <span>Еда</span>
-                <p>Всегда заказывайте фирменный бургер,вы не разочаруетесь!</p>
+                <p class="text">Всегда заказывайте фирменный бургер,вы не разочаруетесь!</p>
               </li>
               <li class="reasons-item item-reasons">
                 <img src="img/icon-3.svg" width="" height="" alt="Сувениры">
@@ -62,38 +62,38 @@
           <li class="reasons-item">
             <img src="img/mount.jpg" width="800" height="256" alt="Фото Моста Дьявола">
             <h3>
-              <p>Там есть<br>мост дьявола</p>
+              <p class="text">Там есть<br>мост дьявола</p>
             </h3>
-            <span>№2</span>
+            <span class="number-reasons">№2</span>
             <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
           </li>
           <li>
             <h3>
               <p>Небольшая площадь</p>
             </h3>
-            <span>№3</span>
-            <p>Все достопримечательности находятся очень близко</p>
+            <span class="number">№3</span>
+            <p class="text">Все достопримечательности находятся очень близко</p>
           </li>
           <li class="reasons-item">
             <h3>
               <span> Красивая дорога</span>
             </h3>
-            <span>№4</span>
-            <p>Ехать в Седону ихз Лас-Вегаса совсем не скучно!</p>
+            <span class="number">№4</span>
+            <p class="text">Ехать в Седону ихз Лас-Вегаса совсем не скучно!</p>
           </li>
           <li class="reasons-item">
             <h3>
               <span>Мало туристов</span>
             </h3>
-            <span>№5</span>
-            <p>Большинство едет в Гранд Коньон и толпится там</p>
+            <span class="number">№5</span>
+            <p class="text">Большинство едет в Гранд Коньон и толпится там</p>
           </li>
         </ol>
       </section>
     </article>
     <section class="appointment-info">
       <h2 class="title">Заинтересовались?</h2>
-      <p>Укажите предполагаемые даты поездки, и мы покажем лучшие предложения гостиниц в Седоне</p>
+      <p class="text">Укажите предполагаемые даты поездки, и мы покажем лучшие предложения гостиниц в Седоне</p>
       <button type="submit">Поиск гостиницы в Седоне</button>
     </section>
     <section class="appointment">
@@ -112,20 +112,20 @@
         </p>
         <div class="number-people">
           <label for="adults">Взрослые:</label>
-          <button type="button">-</button>
+          <button class="btn-edit" type="button">-</button>
           <input type="number" id="adults" value="2">
-          <button type="button">+</button>
+          <button class="btn-edit" type="button">+</button>
           <label for="child">Дети:</span>
-          <button type="button">-</button>
+          <button class="btn-edit" type="button">-</button>
           <input type="number" id="child" value="0">
-          <button type="button">+</button>
+          <button class="btn-edit" type="button">+</button>
         </div>
         <button class="button" type="submit">Найти</button>
       </form>
     </section>
   </main>
   <footer class="main-footer">
-    <p>#Visitsedona</p>
+    <p class="visit">#Visitsedona</p>
     <p class="footer-contacts">Тел:
       <a href="tel:+74956660266">+7(495)666-02-66</a>
     </p>
