--- a/catalog.html
+++ b/catalog.html
@@ -62,16 +62,16 @@
       </form>
     </section>
     <section class="select-hotel">
-      <h3 class="item-select-title">Найдено: 3</h3>
-      <span class="catalog-sort">Сортировка:</span>
+      <h3 class="select-title">Найдено: 3</h3>
+      <span class="sort">Сортировка:</span>
       <ul class="breadcrumbs">
-        <li class="catalog-sort-item">
+        <li class="sort-item">
           <span class="breadcrumbs-current">По цене</span>
         </li>
-        <li class="catalog-sort-item">
+        <li class="sort-item">
           <span>По типу</span>
         </li>
-        <li class="catalog-sort-item">
+        <li class="sort-item">
           <span>По рейтингу</span>
         </li>
         <li>
@@ -89,7 +89,7 @@
           </a>
           <h3>Amara Resort & spa</h3>
           <span class="catalog-category">Гостиница</span>
-          <span class="catalog-item-price">От 4000 р.</span>
+          <span class="price">От 4000 р.</span>
           <a class="button" href="">Подробнее</a>
           <a class="btn" href="">Забронировать</a>
           <img src="img/star.svg" width="18" height="17">
@@ -101,7 +101,7 @@
           </a>
           <h3>Desert Quail Inn</h3>
           <span class="catalog-category">Мотель</span>
-          <span class="catalog-item-price">От 3000 р.</span>
+          <span class="price">От 3000 р.</span>
           <a class="button" href="">Подробнее</a>
           <a class="btn" href="">Забронировать</a>
           <img src="img/star.svg" width="18" height="17">
@@ -113,7 +113,7 @@
           </a>
           <h3>Villas at Poco Diablo</h3>
           <span class="catalog-category">Апартаменты</span>
-          <span class="catalog-item-price">От 2000 р.</span>
+          <span class="price">От 2000 р.</span>
           <a class="button" href="">Подробнее</a>
           <a class="btn" href="">Забронировать</a>
           <img src="img/star.svg" width="18" height="17">
@@ -123,7 +123,7 @@
     </section>
   </main>
   <footer class="main-footer">
-    <p class="visit">#Visitsedona</p>
+    <p class="hashtag">#Visitsedona</p>
     <p class="footer-contacts">Тел:
       <a href="tel:+74956660266">+7(495)666-02-66</a>
     </p>
@@ -136,7 +136,7 @@
     </div>
     <p>
     <span class="footer-copyright">Website by</span>
-      <a class="footer-link" href="https://htmlacademy.ru/intensive/htmlcss">
+      <a class="copyright-logo" href="https://htmlacademy.ru/intensive/htmlcss">
         <img src="img/logo-htmlacademy.svg" width="115" height="41" alt="Логотип HTML Academy">
       </a>
     </p>
