--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
-  <header class="main-header">
-    <nav class="main-navigation">
-      <a class="main-header-logo">
+  <header class="header-menu">
+    <nav class="navigation-menu">
+      <a class="header-logo-menu">
         <img src="img/logo-sedona.svg" width="138" height="70" alt="Логотип Седоны">
       </a>
       <ul class="site-navigation">
