--- a/catalog.html
+++ b/catalog.html
@@ -10,10 +10,10 @@
 <body>
   <header class="main-header">
     <nav class="main-navigation">
-      <a class="main-header-logo" href="index.html">
+      <a class="header-logo-menu">
         <img src="img/logo-sedona.svg" width="138" height="70" alt="Логотип Седоны">
       </a>
-      <ul class="site-navigation">
+      <ul class="header-navigation">
         <li><a href="info.html">Информация</a></li>
         <li><a href="photo.html">Фото и видео</a></li>
         <li><a href="map.html">Карта штата</a></li>
@@ -22,51 +22,51 @@
     </nav>
   </header>
   <main class="container">
-    <section class="box">
+    <section class="filtre">
       <h2 class="visually-hidden">Фильтр отелей</h2>
-      <form class="filter" method="get" action="https://echo.htmlacademy.ru">
+      <form class="filter-form" method="get" action="https://echo.htmlacademy.ru">
         <fieldset>
-          <legend class="title-filter-form">Инфраструктура:</legend>
-          <ul>
-            <li class="filter-option-item">
-              <label for="basin">Бассейн</label>
-              <input type="checkbox" id="basin" name="basin" checked>
+          <legend class="filter-title">Инфраструктура:</legend>
+          <ul class="filter-list">
+            <li class="filter-item">
+              <label class="filter-item-title" for="basin">Бассейн</label>
+              <input class="filter-item-value" type="checkbox" id="basin" name="basin" checked>
             </li>
-            <li class="filter-option-item">
+            <li class="filter-item">
               <label for="parking">Парковка></label>
               <input type="checkbox" id="parking" name="parking">
             </li>
-            <li class="filter-option-item">
+            <li class="filter-item">
               <label for="wi-fi">WI-FI</label>
               <input type="checkbox" id="wi-fi" name="wi-fi">
             </li>
           </ul>
           <h2 class="visually-hidden">Фильтр отелей</h2>
-          <legend class="title-filter-form">Тип жилья:</legend>
+          <legend class="filter-title">Тип жилья:</legend>
           <ul>
-            <li class="filter-hotel-item">
+            <li class="filter-hotel">
               <label for="hotel">Гостиница</label>
               <input type="checkbox" id="hotel" name="hotel" checked>
             </li>
-            <li class="filter-hotel-item">
+            <li class="filter-hotel">
               <label for="motel">Мотель</label>
               <input type="checkbox" id="motel" name="motel" checked>
             </li>
-            <li class="filter-hotel-item">
+            <li class="filter-hotel">
               <label for="apartment">Аппартаменты</label>
               <input type="checkbox" id="apartment" name="apartment" checked>
             </li>
           </ul>
-          <button class="button-form" type="submit">Показать</button>
+          <button class="filter-button" type="submit">Показать</button>
         </fieldset>
       </form>
     </section>
-    <section class="select-hotel">
-      <h3 class="select-title">Найдено: 3</h3>
-      <span class="sort">Сортировка:</span>
-      <ul class="breadcrumbs">
+    <section class="result">
+      <h3 class="result-count">Найдено: 3</h3>
+      <span class="result-sort">Сортировка:</span>
+      <ul class="sort-list">
         <li class="sort-item">
-          <span class="breadcrumbs-current">По цене</span>
+          <span class="sort-item-current">По цене</span>
         </li>
         <li class="sort-item">
           <span>По типу</span>
@@ -75,8 +75,8 @@
           <span>По рейтингу</span>
         </li>
         <li>
-          <img src="img/icon-down-dir.svg" width="11" height="10">
-          <img src="img/icon-up-dir.svg" width="11" height="10">
+          <img class="sort-item-icon" src="img/icon-down-dir.svg" width="11" height="10">
+          <img class="sort-item-icon" src="img/icon-up-dir.svg" width="11" height="10">
         </li>
       </ul>
     </section>
@@ -85,15 +85,15 @@
       <ul class="catalog-list">
         <li class="catalog-item">
           <a href="">
-            <img src="img/amara.jpg" width="135" height="90" alt="Вид на гостиницу Amara Resort & spa">
+            <img class="catalog-item-img" src="img/amara.jpg" width="135" height="90" alt="Вид на гостиницу Amara Resort & spa">
           </a>
-          <h3>Amara Resort & spa</h3>
-          <span class="catalog-category">Гостиница</span>
-          <span class="price">От 4000 р.</span>
-          <a class="button" href="">Подробнее</a>
-          <a class="btn" href="">Забронировать</a>
-          <img src="img/star.svg" width="18" height="17">
-          <span class="top">Рейтинг: 8,5</span>
+          <h3 class="catalog-item-title" Amara Resort & spa</h3>
+          <span class="catalog-item-type"> Гостиница</span>
+          <span class="catalog-item price">От 4000 р.</span>
+          <a class="catalog-item-button" href="">Подробнее</a>
+          <a class="catalog-item-button" href="">Забронировать</a>
+          <img class="catalog-item-icon" src="img/star.svg" width="18" height="17">
+          <span class="catalog-item-rating">Рейтинг: 8,5</span>
         </li>
         <li class="catalog-item">
           <a href="">
@@ -101,11 +101,11 @@
           </a>
           <h3>Desert Quail Inn</h3>
           <span class="catalog-category">Мотель</span>
-          <span class="price">От 3000 р.</span>
-          <a class="button" href="">Подробнее</a>
-          <a class="btn" href="">Забронировать</a>
+          <span class="catalog-price">От 3000 р.</span>
+          <a class="catalog-button" href="">Подробнее</a>
+          <a class="catalog-btn" href="">Забронировать</a>
           <img src="img/star.svg" width="18" height="17">
-          <span class="top">Рейтинг: 8,9</span>
+          <span class="catalog-top">Рейтинг: 8,9</span>
         </li>
         <li class="catalog-item">
         <a href="">
@@ -113,18 +113,18 @@
           </a>
           <h3>Villas at Poco Diablo</h3>
           <span class="catalog-category">Апартаменты</span>
-          <span class="price">От 2000 р.</span>
-          <a class="button" href="">Подробнее</a>
-          <a class="btn" href="">Забронировать</a>
+          <span class="catalog-price">От 2000 р.</span>
+          <a class="catalog-button" href="">Подробнее</a>
+          <a class="catalog-btn" href="">Забронировать</a>
           <img src="img/star.svg" width="18" height="17">
-          <span class="top">Рейтинг: 9,2</span>
+          <span class="catalog-top">Рейтинг: 9,2</span>
         </li>
       </ul>
     </section>
   </main>
   <footer class="main-footer">
-    <p class="hashtag">#Visitsedona</p>
-    <p class="footer-contacts">Тел:
+    <p class="footer-hashtag">#Visitsedona</p>
+    <p class="footer-phone">Тел:
       <a href="tel:+74956660266">+7(495)666-02-66</a>
     </p>
     <div class="footer-social">
@@ -136,7 +136,7 @@
     </div>
     <p>
     <span class="footer-copyright">Website by</span>
-      <a class="copyright-logo" href="https://htmlacademy.ru/intensive/htmlcss">
+      <a class="footer-copyright-logo" href="https://htmlacademy.ru/intensive/htmlcss">
         <img src="img/logo-htmlacademy.svg" width="115" height="41" alt="Логотип HTML Academy">
       </a>
     </p>
